--- a/templates/stub.html
+++ b/templates/stub.html
@@ -1,6 +1,6 @@
 <div class="px-5 py-5 mx-auto">
     <h1 class="text-primary"><strong>Stubby Body</strong></h1>
-    <p class="text-secondary">Put your name here</p>
+    <p class="text-secondary">Ekam</p>
 </div>
 
 <!-- Extending the predefined project layout -->
