--- a/templates/stub.html
+++ b/templates/stub.html
@@ -14,7 +14,7 @@
     <!- Try building a new body here, bootstrap is a wise choice ->
     <div class="px-5 py-5 mx-auto">
         <h1 class="text-primary"><strong>Stubby Body</strong></h1>
-        <p class="text-secondary">Put your name here</p>
+        <p class="text-secondary"><a href="https://lwu1822.github.io/fastpages/">Lily's fastpages</a></p>
     </div>
 {% endblock %}
 
