--- a/bp_projects/templates/bp_projects/hawkers.html
+++ b/bp_projects/templates/bp_projects/hawkers.html
@@ -3,7 +3,7 @@
 
 <!-- Setting up variables to customize "project" details to be specific to hawkers -->
 {% set project = "Hawkers" %}
-{% set overview = "https://hawkers.nighthawkcodingsociety.com/aboutus" %}
+{% set Ekam's Fastpages = "https://ekamjot-kaire.github.io/fast-pages/" %}
 {% set scrumboard = "https://github.com/noyah81/p2ducks/projects/1" %}
 {% set repo = "https://github.com/noyah81/p2ducks" %}
 {% set authors = "https://nighthawkcodingsociety.com/projectsearch/details/Hawkers%20Tweet" %}
