--- a/bp_projects/templates/bp_projects/portfolio.html
+++ b/bp_projects/templates/bp_projects/portfolio.html
@@ -1,7 +1,9 @@
 <!-- Extending the project layout, as this file will do minor customizations -->
 {% extends "layouts/project.html" %}
 
-<!-- Setting up variables to customize "project" details to be specific to index page -->
-{% set project = "Portfolio" %}
+<!-- Setting up variables to customize "project" details to be specific to hawkers -->
+{% set project = "Hawkers" %}
 {% set Ekam's Fastpages = "https://ekamjot-kaire.github.io/fast-pages/" %}
-{% set repo = "https://github.com/nighthawkcoders/flask_portfolio/" %}
+{% set scrumboard = "https://github.com/noyah81/p2ducks/projects/1" %}
+{% set repo = "https://github.com/noyah81/p2ducks" %}
+{% set authors = "https://nighthawkcodingsociety.com/projectsearch/details/Hawkers%20Tweet" %}
