--- a/bp_projects/templates/bp_projects/walruses.html
+++ b/bp_projects/templates/bp_projects/walruses.html
@@ -3,7 +3,7 @@
 
 <!-- Setting up variables to customize "project" details to be specific to walruses -->
 {% set project = "Walruses" %}
-{% set overview = "https://nighthawkcodingsociety.com/projectsearch/dash" %}
+{% set overview = "https://henerystone.github.io/ws2/" %}
 {% set scrumboard = "https://github.com/ridhimainukurti/group-2/projects/1" %}
 {% set repo = "https://github.com/ridhimainukurti/group-2" %}
 {% set authors = "https://wasc.nighthawkcodingsociety.com/about"  %}
