--- a/bp_projects/templates/bp_projects/portfolio.html
+++ b/bp_projects/templates/bp_projects/portfolio.html
@@ -3,8 +3,7 @@
 
 <!-- Setting up variables to customize "project" details to be specific to hawkers -->
 {% set project = "Hawkers" %}
-{% set scrumboard = "https://github.com/noyah81/p2ducks/projects/1" %}
+{% set Ekams Fastpages= "https://ekamjot-kaire.github.io/fast-pages/" %}
 {% set repo = "https://github.com/noyah81/p2ducks" %}
 {% set authors = "https://nighthawkcodingsociety.com/projectsearch/details/Hawkers%20Tweet" %}
 
-<p class="text-secondary"><a href="https://ekamjot-kaire.github.io/fast-pages/">Ekams fastpages</a></p>
