--- a/bp_projects/templates/bp_projects/hawkers.html
+++ b/bp_projects/templates/bp_projects/hawkers.html
@@ -3,7 +3,7 @@
 
 <!-- Setting up variables to customize "project" details to be specific to hawkers -->
 {% set project = "Hawkers" %}
-{% set Ekam's Fastpages = https://ekamjot-kaire.github.io/fast-pages/ %}
+{% set overview = "https://nighthawkcoders.github.io/APCSP//2022/09/12/PBL-fastpages-docker.html#1-installation" %}
 {% set scrumboard = "https://github.com/noyah81/p2ducks/projects/1" %}
 {% set repo = "https://github.com/noyah81/p2ducks" %}
 {% set authors = "https://nighthawkcodingsociety.com/projectsearch/details/Hawkers%20Tweet" %}
