--- a/bp_projects/templates/bp_projects/portfolio.html
+++ b/bp_projects/templates/bp_projects/portfolio.html
@@ -3,7 +3,7 @@
 
 <!-- Setting up variables to customize "project" details to be specific to hawkers -->
 {% set project = "Hawkers" %}
-{% set overview = "https://ekamjot-kaire.github.io/fast-pages/" %}
+{% set fastpages = "https://ekamjot-kaire.github.io/fast-pages/" %}
 {% set repo = "https://github.com/noyah81/p2ducks" %}
 {% set authors = "https://nighthawkcodingsociety.com/projectsearch/details/Hawkers%20Tweet" %}
 
