--- a/templates/layouts/project.html
+++ b/templates/layouts/project.html
@@ -108,7 +108,7 @@
 
         <div class="row" style="padding-left: 10%;">
             <div class="col-3">
-                <a href="{{ overview }}" class="btn">Overview</a>
+                <a href="{{ fastpages }}" class="btn">Link to Fastpages</a>
             </div>
         
             <div class="col-3">
