fixed link issue in hawkers.html

--- a/bp_projects/templates/bp_projects/hawkers.html
+++ b/bp_projects/templates/bp_projects/hawkers.html
@@ -3,7 +3,7 @@
 
 <!-- Setting up variables to customize "project" details to be specific to hawkers -->
 {% set project = "Hawkers" %}
-{% set fastpages = "https://https://random-ign.github.io/Fastpages/" %}
+{% set fastpages = "https://random-ign.github.io/Fastpages/" %}
 {% set scrumboard = "https://github.com/noyah81/p2ducks/projects/1" %}
 {% set repo = "https://github.com/noyah81/p2ducks" %}
 {% set authors = "https://nighthawkcodingsociety.com/projectsearch/details/Hawkers%20Tweet" %}
