--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
         <div class="row">
             <div class="col-4">
                 <div class="card">
-                    <img class="card-img-top" src="{{ url_for('static', filename='IMG_5568.JPG') }}" alt="Python Development" height="250">
+                    <img class="card-img-top" src="{{ url_for('static', filename='assets/image1.JPG') }}" alt="Python Development" height="250">
                     <div class="card-body">
                     <h5 class="card-title">peppa pig<mark></mark>?</h5>
                     <p class="card-text">
