--- a/templates/index.html
+++ b/templates/index.html
@@ -8,13 +8,14 @@
         <div class="row">
             <div class="col-4">
                 <div class="card">
-                    <img class="card-img-top" src="{{ url_for('static', filename='assets/image1.JPG') }}" alt="Python Development" height="250">
+                    <img class="card-img-top" src="{{ url_for('static', filename='assets/bg1.png') }}" alt="Python Development" height="250">
                     <div class="card-body">
-                    <h5 class="card-title">peppa pig<mark></mark>?</h5>
+                    <h5 class="card-title">basics of animation</h5>
                     <p class="card-text">
                         <ol>
-                            <li>wow peppa have you been working out? </li>
-                            <li>i love muddy puddles</li>
+                            <li>there are 7 total principles of animation that define movement and effective staging </li>
+                            <li>fps refers to the amount of frames shown every second; more frames gives smoother animation, while less frames can give a more sylized feel</li>
+                            <li> 2d animation can be done frame-by-frame, where every frame is redrawn, or puppet, where premade assets are moved accross the screen
                         </ol>
                     </p>
                     <a href="#" class="btn btn-primary">Go somewhere</a>
