--- a/templates/index.html
+++ b/templates/index.html
@@ -24,13 +24,12 @@
             </div>
             <div class="col-4">
                 <div class="card">
-                    <img class="card-img-top" src="{{ url_for('static', filename='IMG_5335.JPG') }}" alt="Flask Development" height="250">
+                    <img class="card-img-top" src="{{ url_for('static', filename='assets/bg2.png') }}" alt="Flask Development" height="250">
                     <div class="card-body">
-                    <h5 class="card-title">its-a me</h5>
+                    <h5 class="card-title">not sure</h5>
                     <p class="card-text">
                         <ol>
-                            <li>Mario is a character created by Japanese video game designer Shigeru Miyamoto. He is the title character of the Mario franchise and the mascot of Japanese video game company Nintendo. Mario has appeared in over 200 video games since his creation. Depicted as a short, pudgy, Italian plumber who resides in the Mushroom Kingdom, his adventures generally center on rescuing Princess Peach from the Koopa villain Bowser. Mario has access to a variety of power-ups that give him different abilities. Mario's fraternal twin brother is Luigi.
-                                Mario first appeared as the player character of Donkey Kong in 1981, a platform game. Miyamoto wanted to use Popeye as the protagonist, but when he could not achieve the licensing rights, he created Mario instead. Miyamoto expected the character to be unpopular and planned to use him for cameo appearances; originally called "Mr. Video", he was renamed to Mario after Mario Segale. Mario's clothing </li>
+                            <li>things</li>
                         </ol>
                     </p>
                     <a href="#" class="btn btn-primary">Go somewhere</a>
