--- a/templates/index.html
+++ b/templates/index.html
@@ -24,12 +24,14 @@
             </div>
             <div class="col-4">
                 <div class="card">
-                    <img class="card-img-top" src="{{ url_for('static', filename='assets/bg2.png') }}" alt="Flask Development" height="250">
+                    <img class="card-img-top" src="{{ url_for('static', filename='assets/backg2.png') }}" alt="Flask Development" height="250">
                     <div class="card-body">
-                    <h5 class="card-title">not sure</h5>
+                    <h5 class="card-title">basics of rollerskating</h5>
                     <p class="card-text">
                         <ol>
-                            <li>things</li>
+                            <li>roller skating is all about shifting your weight while maintainting balance</li>
+                            <li>for example, when moving forward, you dont place your feet in front of each other like you would while walking; instead you shift your weight from left to right to gain momentum</li>
+                            <li>many parts of roller skating, like spinning, turning, jumping, etc, is all about learning where to keep your weight</li>
                         </ol>
                     </p>
                     <a href="#" class="btn btn-primary">Go somewhere</a>
