--- a/templates/index.html
+++ b/templates/index.html
@@ -40,14 +40,16 @@
             </div>
             <div class="col-4">
                 <div class="card">
-                    <img class="card-img-top" src="{{ url_for('static', filename='IMG_4662.jpg') }}" alt="Backend and Persistence" height="250">
+                    <img class="card-img-top" src="{{ url_for('static', filename='assets/bg3.png') }}" alt="Backend and Persistence" height="250">
                     <div class="card-body">
-                    <h5 class="card-title">this is my dog simba</h5>
+                    <h5 class="card-title">basics of color theory</h5>
                     <p class="card-text">
                         <ol>
-                            <li>he is here because i need another image for this card</li>
-                            <li>i love simba he is very cool</li>
-                            <li>he ate my airpods but thats ok because hes fluffy</li>
+                            <li>the images in these cards are from the videogame "gris"</li>
+                            <li>gris is about a girl going through the 5 stages of grief after losing her mother</li>
+                            <li>color theory is the idea of using colors to express ideas socially associated with that color</li>
+                            <li>gris does this by having one dominating color in every level to represent a stage of grief</li>
+                            <li>however, good usage of color theory, like in gris, is complex and illustrates many ideas at once </li>
                         </ol>
                     </p>
                     <a href="#" class="btn btn-primary">Go somewhere</a>
