--- a/templates/stub.html
+++ b/templates/stub.html
@@ -1,20 +1,18 @@
 <div class="px-5 py-5 mx-auto">
-    <h1 class="text-primary"><strong>Stubby Body</strong></h1>
-    <p class="text-secondary">Ekam</p>
 </div>
 
 <!-- Extending the predefined project layout -->
 {% extends "layouts/base.html" %}
 
 <!- This variable sets name of browser tab  -->
-{% set project = "Stubby" %}
+{% set project = "About Me" %}
 
 <!- This is a replacement block for Body in base.html -->
 {% block body %}
     <!- Try building a new body here, bootstrap is a wise choice ->
     <div class="px-5 py-5 mx-auto">
-        <h1 class="text-primary"><strong>Stubby Body</strong></h1>
-        <p class="text-secondary"></a></p>
+        <h1 class="text-primary"><strong>title </strong></h1>
+        <p class="text-secondary"></a>words wotsdjf</p>
     </div>
 {% endblock %}
 
