--- a/templates/stub.html
+++ b/templates/stub.html
@@ -11,8 +11,11 @@
 {% block body %}
     <!- Try building a new body here, bootstrap is a wise choice ->
     <div class="px-5 py-5 mx-auto">
-        <h1 class="text-primary"><strong>title </strong></h1>
-        <p class="text-secondary"></a>words wotsdjf</p>
+        <h1 class="text-primary"><strong> About me:</strong></h1>
+        <p class="text-secondary"></a>Name: Ekam</p>
+        <p class="text-secondary"></a>Grade: 11</p>
+        <p class="text-secondary"></a>Class: CSP</p>
+        <p class="text-secondary"></a>Age: 16</p>
     </div>
 {% endblock %}
 
